Updated question-inspect page and end page

--- a/src/frontend/parlai-app/src/app/end-page/end-page.component.html
+++ b/src/frontend/parlai-app/src/app/end-page/end-page.component.html
@@ -3,4 +3,9 @@
   <h1 style="margin-top:50px;">
     {{ title }}
   </h1>
+  <div>
+      <button mat-raised-button color="primary" class="" [routerLink]="['/start']">Back to Homepage
+      </button>
+    </div>
+  
 </div>
