Scroll to top button working!

--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.html
@@ -271,6 +271,10 @@ Handhavingsstelsel</a></li>
         </div>
 
         <button mat-raised-button color="primary" [routerLink]="['/question-compose']">Compose Answer</button>
+        
+        
+        <app-scroll-top></app-scroll-top>
+        
     </div>
   </div>
 
