--- a/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
+++ b/src/frontend/parlai-app/src/app/question-submitted/question-submitted.component.html
@@ -2,9 +2,11 @@
 
 <div style="text-align:center" class="mat-typography">
     <h1 style="margin-top:50px;">
-      Answer was successfully submitted
+        Answer was successfully submitted
     </h1>
     <h2>Start entering a new set of questions?</h2>
     <button mat-raised-button color="primary" [routerLink]="['/upload']">Yes</button>
     <button mat-raised-button color="alert" [routerLink]="['/endpage']">No</button>
-  </div>
+</div>
+
+<app-scroll-top></app-scroll-top>
