--- a/src/frontend/parlai-app/src/app/start/start.component.html
+++ b/src/frontend/parlai-app/src/app/start/start.component.html
@@ -1,10 +1,12 @@
 <div class="top-margin"></div>
 
 <div style="text-align:center" class="mat-typography">
-  <h1 style="margin-top:50px;">
-    {{ title }}
-  </h1>
+    <h1 style="margin-top:50px;">
+        {{ title }}
+    </h1>
 
-  <h2>Answering parliamentary questions with AI</h2>
-  <button mat-raised-button color="primary" [routerLink]="['/upload']">Start</button>
+    <h2>Answering parliamentary questions with AI</h2>
+    <button mat-raised-button color="primary" [routerLink]="['/upload']">Start</button>
 </div>
+
+<app-scroll-top></app-scroll-top>
