--- a/src/frontend/parlai-app/src/app/end-page/end-page.component.html
+++ b/src/frontend/parlai-app/src/app/end-page/end-page.component.html
@@ -1,6 +1,8 @@
 <div class="top-margin"></div>
 <div style="text-align:center" class="mat-typography">
-  <h1 style="margin-top:50px;">
-    {{ title }}
-  </h1>
+    <h1 style="margin-top:50px;">
+        {{ title }}
+    </h1>
 </div>
+
+<app-scroll-top></app-scroll-top>
