--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -1,117 +1,106 @@
 <div class="top-margin"></div>
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body class="mat-typography">
 
-  <div class="row">
-    <div class="column">
-      <h2>Answer the questions here</h2>
+    <div class="row">
+        <div class="column">
+            <h2>Answer the questions here</h2>
 
-      <div>
-        <p class="mat-body-strong">Question 1</p>
-        <p>Kent u het bericht «Schokkende toename vliegverkeer Buitenveldertbaan»?</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
+            <div>
+                <p class="mat-body-strong">Question 1</p>
+                <p>Kent u het bericht «Schokkende toename vliegverkeer Buitenveldertbaan»?</p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
 
-      <div>
-        <p class="mat-body-strong">Question 2</p>
-        <p>Klopt het dat in 2017 overdag 34% méér vliegtuigen gebruik hebben gemaakt van
-de Buitenveldertbaan? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het
-daggebruik van de Buitenveldertbaan terug te dringen?
-</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
+            <div>
+                <p class="mat-body-strong">Question 2</p>
+                <p>Klopt het dat in 2017 overdag 34% méér vliegtuigen gebruik hebben gemaakt van de Buitenveldertbaan? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het daggebruik van de Buitenveldertbaan terug te dringen?
+                </p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
 
-      <div>
-        <p class="mat-body-strong">Question 3</p>
-        <p>Klopt het dat in 2017 ‘s nachts 13% méér vliegtuigen gebruik hebben gemaakt
-van de Buitenveldertbaan? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het
-nachtgebruik van de Buitenveldertbaan terug te dringen?
-</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
-        
-              <div>
-        <p class="mat-body-strong">Question 4</p>
-        <p>Bent u ermee bekend dat de inzet van de Buitenveldertbaan al jaren hoger is dan
-nodig? Zo nee, waaruit blijkt het tegendeel?
+            <div>
+                <p class="mat-body-strong">Question 3</p>
+                <p>Klopt het dat in 2017 ‘s nachts 13% méér vliegtuigen gebruik hebben gemaakt van de Buitenveldertbaan? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het nachtgebruik van de Buitenveldertbaan terug te dringen?
+                </p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
 
-</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
-        
-              <div>
-        <p class="mat-body-strong">Question 5</p>
-        <p>Klopt het dat het percentage uren waarop geen vliegtuigen te horen zijn overdag
-slechts 37% bedraagt? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het
-aantal vliegtuigloze uren te verhogen?
-</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
-        
-              <div>
-        <p class="mat-body-strong">Question 6</p>
-        <p>Klopt het dat het percentage uren waarop geen vliegtuigen te horen zijn in de
-nacht nog geen driekwart van de tijd bedraagt? Zo nee, hoe zit het dan? Zo ja,
-wat is uw inzet om het aantal vliegtuigloze uren te verhogen?
-</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
-        
-              <div>
-        <p class="mat-body-strong">Question 7</p>
-        <p>Klopt het dat alle gemeten waarden 1 tot ruim 2 dB hoger liggen dan de door het
-Nederlands Lucht- en Ruimtevaartcentrum (in opdracht van Schiphol) berekende
-waarden? Zo nee, hoe zit het dan?
+            <div>
+                <p class="mat-body-strong">Question 4</p>
+                <p>Bent u ermee bekend dat de inzet van de Buitenveldertbaan al jaren hoger is dan nodig? Zo nee, waaruit blijkt het tegendeel?
 
-</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
-        
-              <div>
-        <p class="mat-body-strong">Question 8</p>
-        <p>Kunt u, naar aanleiding van deze berichtgeving, reflecteren op de ontwikkelingen
-op de woningmarkt in de regio rond Schiphol?
-</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
-        
-              <div>
-        <p class="mat-body-strong">Question 9</p>
-        <p>Hoeveel woningen zijn er sinds 1990 jaarlijks gebouwd op plaatsen waar je
-vliegtuigen die gebruikmaken van de Buitenveldertbaan kan horen? Kunt u eenzelfde overzicht verschaffen van alle andere landingsbanen? Zo nee, waarom
-niet? 
-</p>
-        <mat-form-field>
-          <textarea matInput placeholder="Answer"></textarea>
-        </mat-form-field>
-      </div>
-        
+                </p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
+
+            <div>
+                <p class="mat-body-strong">Question 5</p>
+                <p>Klopt het dat het percentage uren waarop geen vliegtuigen te horen zijn overdag slechts 37% bedraagt? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het aantal vliegtuigloze uren te verhogen?
+                </p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
+
+            <div>
+                <p class="mat-body-strong">Question 6</p>
+                <p>Klopt het dat het percentage uren waarop geen vliegtuigen te horen zijn in de nacht nog geen driekwart van de tijd bedraagt? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het aantal vliegtuigloze uren te verhogen?
+                </p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
+
+            <div>
+                <p class="mat-body-strong">Question 7</p>
+                <p>Klopt het dat alle gemeten waarden 1 tot ruim 2 dB hoger liggen dan de door het Nederlands Lucht- en Ruimtevaartcentrum (in opdracht van Schiphol) berekende waarden? Zo nee, hoe zit het dan?
+
+                </p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
+
+            <div>
+                <p class="mat-body-strong">Question 8</p>
+                <p>Kunt u, naar aanleiding van deze berichtgeving, reflecteren op de ontwikkelingen op de woningmarkt in de regio rond Schiphol?
+                </p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
+
+            <div>
+                <p class="mat-body-strong">Question 9</p>
+                <p>Hoeveel woningen zijn er sinds 1990 jaarlijks gebouwd op plaatsen waar je vliegtuigen die gebruikmaken van de Buitenveldertbaan kan horen? Kunt u eenzelfde overzicht verschaffen van alle andere landingsbanen? Zo nee, waarom niet?
+                </p>
+                <mat-form-field>
+                    <textarea matInput placeholder="Answer"></textarea>
+                </mat-form-field>
+            </div>
+
+        </div>
+        <div class="scrolling-column">
+            <h2>Final Document</h2>
+
+            <button mat-raised-button color="primary" [routerLink]="['/question-submitted']">Submit Answer</button>
+
+            <app-scroll-top></app-scroll-top>
+
+        </div>
     </div>
-    <div class="scrolling-column">
-      <h2>Final Document</h2>
-
-      <button mat-raised-button color="primary" [routerLink]="['/question-submitted']">Submit Answer</button>
-    </div>
-  </div>
 
 </body>
