Revamped introduction, upload and question-inspect components

--- a/src/frontend/parlai-app/src/app/app.component.html
+++ b/src/frontend/parlai-app/src/app/app.component.html
@@ -6,7 +6,7 @@
     </div>
     <button mat-button
             [routerLink]="['/start']">parlAI</button>
-    <button mat-button
+    <!-- <button mat-button
             [matMenuTriggerFor]="menu">navigate</button>
     <mat-menu #menu="matMenu"
               color="primary">
@@ -22,7 +22,7 @@
                 [routerLink]="['/question-submitted']">question submitted</button>
         <button mat-menu-item
                 [routerLink]="['/document-view']">document view</button>
-    </mat-menu>
+    </mat-menu> -->
 </nav>
 
 <router-outlet></router-outlet>
