--- a/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
+++ b/src/frontend/parlai-app/src/app/question-inspect/question-inspect.component.scss
@@ -7,7 +7,7 @@
     float: left;
     width: 50%;
     padding: 10px;
-    height: 300px; /* Should be removed. Only for demonstration */
+    // height: 300px; /* Should be removed. Only for demonstration */
 }
 
 .scrolling-column{
