Added question answering service to transfer answers to compose screen

--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.html
@@ -10,99 +10,32 @@
         <div class="column">
             <div class="fixed-white-space"> </div>
             <div class="fixed-text">
-                <h2>Answer the questions here</h2>
+                <h2>Overview of your Answers</h2>
             </div>
             <div class="empty-space"></div>
-            <div>
-                <p class="mat-body-strong">Question 1</p>
-                <p>Kent u het bericht «Schokkende toename vliegverkeer Buitenveldertbaan»?</p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
 
-            <div>
-                <p class="mat-body-strong">Question 2</p>
-                <p>Klopt het dat in 2017 overdag 34% méér vliegtuigen gebruik hebben gemaakt van de Buitenveldertbaan? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het daggebruik van de Buitenveldertbaan terug te dringen?
-                </p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <p class="mat-body-strong">Question 3</p>
-                <p>Klopt het dat in 2017 ‘s nachts 13% méér vliegtuigen gebruik hebben gemaakt van de Buitenveldertbaan? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het nachtgebruik van de Buitenveldertbaan terug te dringen?
-                </p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <p class="mat-body-strong">Question 4</p>
-                <p>Bent u ermee bekend dat de inzet van de Buitenveldertbaan al jaren hoger is dan nodig? Zo nee, waaruit blijkt het tegendeel?
-
-                </p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <p class="mat-body-strong">Question 5</p>
-                <p>Klopt het dat het percentage uren waarop geen vliegtuigen te horen zijn overdag slechts 37% bedraagt? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het aantal vliegtuigloze uren te verhogen?
-                </p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <p class="mat-body-strong">Question 6</p>
-                <p>Klopt het dat het percentage uren waarop geen vliegtuigen te horen zijn in de nacht nog geen driekwart van de tijd bedraagt? Zo nee, hoe zit het dan? Zo ja, wat is uw inzet om het aantal vliegtuigloze uren te verhogen?
-                </p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <p class="mat-body-strong">Question 7</p>
-                <p>Klopt het dat alle gemeten waarden 1 tot ruim 2 dB hoger liggen dan de door het Nederlands Lucht- en Ruimtevaartcentrum (in opdracht van Schiphol) berekende waarden? Zo nee, hoe zit het dan?
-
-                </p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <p class="mat-body-strong">Question 8</p>
-                <p>Kunt u, naar aanleiding van deze berichtgeving, reflecteren op de ontwikkelingen op de woningmarkt in de regio rond Schiphol?
-                </p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
-
-            <div>
-                <p class="mat-body-strong">Question 9</p>
-                <p>Hoeveel woningen zijn er sinds 1990 jaarlijks gebouwd op plaatsen waar je vliegtuigen die gebruikmaken van de Buitenveldertbaan kan horen? Kunt u eenzelfde overzicht verschaffen van alle andere landingsbanen? Zo nee, waarom niet?
-                </p>
-                <mat-form-field>
-                    <textarea matInput placeholder="Answer"></textarea>
-                </mat-form-field>
-            </div>
+            <ul class="card">
+                <li *ngFor="let question of questions; index as i">
+                    <mat-card class="example-card">
+                        <mat-card-header>
+                            <mat-card-title style="font-weight: 400;font-size: 14px;">{{i+1}}. {{question.content}}</mat-card-title>
+                            <mat-card-subtitle>{{question.questionClass}}</mat-card-subtitle>
+                        </mat-card-header>
+                        <mat-form-field>
+                            <textarea matInput placeholder="Answer" [(ngModel)]='question.answer'></textarea>
+                        </mat-form-field>
+                    </mat-card>
+                </li>
+            </ul>
 
         </div>
         <div class="scrolling-column">
             <div class="fixed-text">
-            <h2>Final Document</h2>
+                <h2>Final Document</h2>
             </div>
             <div class="empty-space-2"></div>
             <p align="center">
-            <button mat-raised-button color="primary" [routerLink]="['/question-submitted']">Submit Answer</button>
+                <button mat-raised-button color="primary" [routerLink]="['/question-submitted']">Submit Answer</button>
             </p>
             <app-scroll-top></app-scroll-top>
 
