--- a/src/frontend/parlai-app/src/app/question-compose/question-compose.component.css
+++ b/src/frontend/parlai-app/src/app/question-compose/question-compose.component.css
@@ -36,3 +36,12 @@
 .mat-form-field {
     width: 100%;
 }
+
+.card {
+    list-style-type: none;
+    padding-left: 0;
+}  
+
+.card li {
+    margin-bottom: 15px;
+}
