--- a/src/frontend/parlai-app/src/app/start/start.component.html
+++ b/src/frontend/parlai-app/src/app/start/start.component.html
@@ -6,7 +6,7 @@
     </h1>
 
     <h2>Answering parliamentary questions with AI</h2>
-    <button mat-raised-button color="primary" [routerLink]="['/upload']">Start</button>
+    <button mat-raised-button color="primary" [routerLink]="['/upload']">Login</button>
 </div>
 
 <app-scroll-top></app-scroll-top>
